--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -20,10 +20,11 @@
 background = #282A2E
 background-alt = #373B41
 foreground = #C5C8C6
-primary = #F0C674
+primary = #00de0b
 secondary = #8ABEB7
 alert = #A54242
 disabled = #707880
+test = #F0C674
 
 [bar/toph]
 monitor = ${env:MONITOR:}
@@ -39,7 +40,7 @@ foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-size = 4pt
+border-size = 0pt
 border-color = #00000000
 
 padding-left = 0
@@ -51,13 +52,14 @@ separator = |
 separator-foreground = ${colors.disabled}
 
 font-0 = monospace;
-font-1 = Font Awesome 6 Brands Regular;
-font-2 = Font Awesome 6 Free Regular; 
-font-3 = Font Awesome 6 Free Solid;
+font-1 = Symbols Nerd Font Mono;
+#font-1 = Font Awesome 6 Brands Regular;
+#font-2 = Font Awesome 6 Free Regular; 
+#font-3 = Font Awesome 6 Free Solid;
 
 ;modules-center = 
 modules-left = xworkspaces 
-modules-right = pulseaudio cpu wlan eth date
+modules-right = i3 pulseaudio cpu wlan eth date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -150,28 +152,41 @@ format-prefix = "CPU "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
+[module/i3]
+type = internal/i3
+pin-workspaces = true
+show-urgent = true
+strip-wsnumbers = true
+index-sort = true
+enable-click = false
+enable-scroll = false
+wrapping-scroll = false
+reverse-scroll = false
+#label-focused-foreground = #00de0b
+#label-unfocused-foreground = #00de0b
+
 [network-base]
 type = internal/network
 interval = 5
 format-connected = <label-connected>
 format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
+label-disconnected = %{F#00de0b}%ifname%%{F#707880} disconnected
 
 [module/wlan]
 inherit = network-base
 interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
+label-connected = %{F#00de0b}%ifname%%{F-} %essid% %local_ip%
 
 [module/eth]
 inherit = network-base
 interface-type = wired
-label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+label-connected = %{F#00de0b}%ifname%%{F-} %local_ip%
 
 [module/date]
 type = internal/date
 interval = 1
 
-date = %H:%M
+date = %I:%M
 date-alt = %Y-%m-%d %H:%M:%S
 
 label = %date%
